no-user basic: init

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <section
-  class="hero"
+  class="hero img-fluid"
   #hero
-  style="background-image: url(assets/images/about-bg.jpg);"
+  style="background-image: url(assets/images/masthead/masthead-bg_1.jpg);"
 >
   <div class="container text-center">
     <nav aria-label="breadcrumb" class="d-flex justify-content-center">
@@ -29,10 +29,9 @@
         </div>
       </div>
     </div>
-    
     <div class="row">
       <div class="downArrow bounce">
-        <i class="fa fa-chevron-down fa-2x"></i>
+        <i class="text-muted fa fa-chevron-down fa-2x"></i>
       </div>
     </div>
   </div>
@@ -42,22 +41,23 @@
     <div class="row">
       <div class="col-lg-8 mx-auto">
         <h3 class="text-muted mb-5 text-center">
-          <strong style="font-size: 200%;" class="text-capitalize">M</strong>edtelplus is a division of <a href="https://www.thenewgts.tech" target="_blank"><img width="125" src="https://firebasestorage.googleapis.com/v0/b/gts-site-80a8a.appspot.com/o/img%2Fgts_logo_alt_short_2.png?alt=media&token=137c99b9-6dd2-443e-933c-ae29c15198be" alt="Global technology Services LLC Logo and link"> </a><br>
-          <small data-aos="fade-left" data-aos-delay="150" class="lead text-muted animated">A Service Disabled Owned Small Business <img
+          <strong style="font-size: 175%;" class="text-capitalize">A</strong> division of <a href="https://www.thenewgts.tech" target="_blank"><img width="125" src="https://firebasestorage.googleapis.com/v0/b/gts-site-80a8a.appspot.com/o/img%2Fgts_logo_alt_short_2.png?alt=media&token=137c99b9-6dd2-443e-933c-ae29c15198be" alt="Global technology Services LLC Logo and link"> </a><br>
+          <span data-aos="fade-left" data-aos-delay="150" class="lead text-muted animated" style="font-size: 65%;">Service Disabled Owned Small Business <img
               src="https://www.integrativestaffing.com/wp-content/uploads/2015/10/sdvosb_logo.jpg" alt="" width="30" />
-          </small>
+          </span>
         </h3>
-        <div class="row">
+        <div class="row mb-5">
           <div class="col-md-5">
-            <p class="mb-5 mt-0">
+            <p class="mb-1 mt-0">
               When our parent company was formed, the only goal was to fulfill every need our customers had regarding technology and
-              logistics.<br>
-              We assembled teams to take on challenging projects, intergrating new technology, building wifi networks, and development healcare communication technology.<br>
-              Partnering up with several other small business, we built a coalition that included a race-team, and all of their
-              sponsors,.<br><br>
-              As a certified <em>SDOSB</em>, we are fortunate to have access to federal funds, by way of government contracts. We are
-              part of a network of over <b>10,000+</b> service disabled owned small businesses, in a multitude of industries.<br>
+              logistics.
               </p>
+              <p class="mb-1 mt-0">We assembled teams to take on challenging projects, intergrating new technology, building wifi networks, and development
+              healcare communication technology.</p>
+              <p class="mb-1 mt-0">Partnering up with several other small business, we built a coalition that included a race-team, and all of their
+              sponsors.</p>
+              <p class="mb-1 mt-0">As a certified <em>SDOSB</em>, we are fortunate to have access to federal funds, by way of government contracts. We are
+              part of a network of over <b>10,000+</b> service disabled owned small businesses, in a multitude of industries.</p>
 
           </div>
           <div class="col-md-7">
@@ -68,21 +68,23 @@
           
           </div>
         </div>
-        <h2 class="mb-3">Our Promise</h2>
-        <ol class="mb-5 text-left">
-          <li>
-            Consistently provide genuine healthcare solutions for both patients and providers.
-          </li>
-          <li>
-            Meet all customer expectations, never missing an opportunity to surpass those expectations.
-          </li>
-          <li>
-            No matter what, include empathy and compassion in everything we do! . 
-          </li>
-        </ol>
-        <hr class="bg-secondary">
-        <h2 class="mb-5">The Team</h2>
         <div class="container">
+          <h2 class="mb-5">The Promise</h2>
+          <ol class="mb-5 text-left">
+            <li>
+              Consistently provide genuine healthcare solutions for both patients and providers.
+            </li>
+            <li>
+              Meet all customer expectations, never missing an opportunity to surpass those expectations.
+            </li>
+            <li>
+              No matter what, include empathy and compassion in everything we do! . 
+            </li>
+          </ol>
+        </div>
+        <hr class="bg-secondary">
+        <div class="container">
+          <h2 class="mb-5">The Team</h2>
           <div class="row">
             <div class="col-md-6 col-lg-4 animated" data-aos="fade-up" data-aos-delay="50">
               <div class="staff">
@@ -93,7 +95,7 @@
                   <h3>Kevin Szkolnik</h3>
                   <span class="position mb-2">CEO</span>
                   <div class="faded">
-                    <p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+                    <p>Currently lives in Florida with his wife, two dogs, and 2 cats.</p>
                     <ul class="d-inline-flex staff-social text-center">
                       <li class="mx-auto"><a href="#"><span class="fa fa-twitter"></span></a></li>
                       <li class="mx-auto"><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -113,7 +115,7 @@
                   <h3>Jimi Flynn</h3>
                   <span class="position mb-2">COO</span>
                   <div class="faded">
-                    <p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+                    <p>Currently lives in Ohio. Likes to play music and be outdoors.</p>
                     <ul class="d-inline-flex staff-social text-center">
                       <li class="mx-auto"><a href="#"><span class="fa fa-twitter"></span></a></li>
                       <li class="mx-auto"><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -133,7 +135,7 @@
                   <h3>Guy Morrison</h3>
                   <span class="position mb-2">Senior Representative</span>
                   <div class="faded">
-                    <p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+                    <p>Currently lives in Florida. Enjoys going to the beach.</p>
                     <ul class="d-inline-flex staff-social text-center">
                       <li class="mx-auto"><a href="#"><span class="fa fa-twitter"></span></a></li>
                       <li class="mx-auto"><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -146,50 +148,50 @@
             </div>
           </div>
         </div>
-        <p class="mb-5">
-          As a new company, <strong class="text-primary">MedTelPlus</strong> has
-          had to work very hard on gaining the trust of our clients and
-          customers. We appreciate all of the wonderful people who choose
-          <strong class="text-primary">MedTelPlus</strong> services and
-          products. Our Founder and CEO,
-          <strong class="text-primary">Kevin Szkolnik</strong>, knows
-          first-hand, why having access to fast, quality healthcare is so
-          important. <br />
-          <br/>
-          While serving in the US Navy, Kevin learned that hard work, a
-          positive perspective, and the desire to give to those who need,
-          could help him find the answers to many of lifes problems.<br />
-          As a
-          <a href="https://www.dav.org/" target="_blank">Disabled Veteran</a>,
-          Kevin has seen his fair share of mediocre medical services,
-          under-trained, under-motivated medical staff, and people in dire need
-          of affordable healthcare (with an emphasis on the 'CARE'); So Kevin
-          took everything he had learned while serving his country and applied
-          it to his business-model when building MedTelPlus.
-        </p>
-        <h3 class="mb-5">What Solutions MedTelPlus Offers</h3>
-        <ul class="mb-4 text-left">
-          <li>Medical Supply & Logistics</li>
-          <li>
-            TeleMedicine: Personalized access to Doctors and Healthcare
-            Proffesionals by phone and video
-          </li>
-          <li>Medical Technology Research & Development</li>
-          <li>Healthcare Patient & Provider Consulting</li>
-        </ul>
+        <hr class="bg-secondary">
+        <div class="container">
+  <h2 class="mb-5">The Vision</h2>
+          <p class="mb-5">
+            We’re in an era of unprecedented complexity in healthcare. Patient care isn't where it should be. While many of the
+            organizations delivering the care need to get much healthier, as well.
+          </p>
+          <p class="mb-5">
+            This is why our vision is to improve care in every setting — one product, one partner, one patient at a time. And we’re
+            making this happen every day by touching virtually every aspect of healthcare.
+          </p>
+          <p class="mb-5">
+            We partner with care providers, pharmacies, manufacturers, governments and others to deliver the
+            right medicines, medical products and healthcare services to the patients who need them, when they need them — safely
+            and cost-effectively.
+          </p>
+          <p class="mb-5">
+            We are
+            dedicated to providing reliable Healthcare services and products. Our
+            mission is to exceed all customer expectations while continuing to
+            grow. Active in
+            our community, we continue to give back to show our appreciation for
+            all the support we have
+            recieved. Thanks to you all!
+          </p>
+        </div>
+        <hr class="bg-secondary">
+        <div class="container">
+          <h2 class="mb-5">The Services</h2>
+          <ul class="mb-4 text-left">
+            <li>Medical Supply & Logistics</li>
+            <li>
+              TeleMedicine: Personalized access to Doctors and Healthcare
+              Proffesionals by phone and video
+            </li>
+            <li>Medical Technology Research & Development</li>
+            <li>Patient & Provider Healthcare Solutions</li>
+          </ul>
+
+        </div>
         <!-- <p><img src="assets/img/blog1.jpg" alt="..." class="img-fluid" /></p> -->
-        <p class="mt-5">
-          <strong class="text-primary">MedTelPlus</strong> and its devisions are
-          dedicated to providing reliable Healthcare services and products. Our
-          mission is to exceed all customer expectations while continuing to
-          grow. <strong class="text-primary">MedTelPlus</strong> is active in
-          our community, and continues to give back to show our appreciation for
-          all the support <strong class="text-primary">MedTelPlus</strong> has
-          recieved. Thanks to you all!
-        </p>
         <blockquote class="blockquote mb-5 text-left">
           <span>
-            If you have any feedback for MedTelPlus, please send us a message
+            If you have any questions or feedback, please send us a message
             <a href="mailto:info@medtelplus.com" class="link">
               <i class="fa fa-envelope"></i> info@medtelplus.com
             </a>
