--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,7 +1,7 @@
 <!-- Hero Section-->
     <section class="hero"
     #hero
-    style="background-image: url(assets/images/faq-bg.jpg);">
+    style="background-image: url(assets/images/masthead/masthead-bg_1.jpg);">
       <div class="container text-center">
         <!-- breadcrumb-->
         <nav aria-label="breadcrumb" class="d-flex justify-content-center">
@@ -10,10 +10,20 @@
             <li aria-current="page" class="breadcrumb-item active">Faq </li>
           </ol>
         </nav>
-        <h1 class="hero-heading">Frequently asked questions</h1>
-        <div class="row">
-          <div class="col-lg-7 mx-auto">
-            <p class="lead">MedTelPlus databse of frequently asked questions. If you can't find an answer just <button class="btn btn-sm btn-link" (click)="navigateTo('contact')"><i class="fa fa-paper-plane"></i> Contact Us</button></p>
+        <div class="row align-items-center justify-content-center">
+          <div class="col-lg-8 mb-5">
+            <h2 class="text-uppercase text-center mb-5" data-aos="fade-up" data-aos-delay="1000">
+              Frequesntly Asked Questions
+            </h2>
+            <hr class="bg-secondary">
+            <div class="row">
+              <div class="panel">
+                <div class="panel-body">
+                  <h3 class="text-center text-default" data-aos="fade-left" data-aos-delay="500">If you would like to know more about us, below are some frequently asked question.
+                  </h3>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="row">
