--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav #nav class="navbar navbar-nav animated slideInDown" data-aos="fixed-header" data-aos-offset="1200">
+<nav #nav class="navbar navbar-nav animated slideInDown border-bottom" data-aos="fixed-header" data-aos-offset="1200">
   <div class="container d-inline-flex">
     <!-- <div class="form-group form-inline mb-0 ml-auto mr-2" [hidden]="nav.clientWidth < 760">
       <input type="text" id="navSearch" (focus)="animateElement('navSearch', 'width', '420px', 0.35)"
