--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: "appton";
-  src: url("../assets/fonts/appton.eot");
-  src: url("../assets/fonts/appton.eot?#iefix") format("embedded-opentype"),
-    url("../assets/fonts/appton.woff") format("woff"),
-    url("../assets/fonts/appton.ttf") format("truetype"),
-    url("../assets/fonts/appton.svg#appton") format("svg");
+  src: url("../assets/fonts/appton/appton.eot");
+  src: url("../assets/fonts/appton/appton.eot?#iefix") format("embedded-opentype"),
+    url("../assets/fonts/appton/appton.woff") format("woff"),
+    url("../assets/fonts/appton/appton.ttf") format("truetype"),
+    url("../assets/fonts/appton/appton.svg#appton") format("svg");
   font-weight: normal;
   font-style: normal;
 
