--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,22 +1,22 @@
 <!-- Hero Section-->
 <!-- TODO: Hero Slider ??? -->
 <section #hero class="hero home-page">
-  <div style="background-image: url(assets/images/masthead/masthead-bg_1.jpg); opacity: .75" class="background">
+  <div style="background-image: url(assets/images/masthead/masthead-bg_1.jpg);" class="background" parallax [config]="{initialValue: -250, ratio: .25}">
   </div>
   <div class="overlay container">
     <div class="row align-items-center justify-content-center">
       <div class="col-lg-8 mb-5">
         <h2 class="text-uppercase text-center mb-5 animate" data-aos="fade-up" data-aos-delay="1000">
-          Supplying the Frontlines of Healthcare
+          Supplying the Frontlines
         </h2>
         <hr class="bg-secondary">
         <div class="row">
           <div class="panel">
             <div class="panel-body">
-              <h3 class="text-center text-default" data-aos="fade-left" data-aos-delay="500">The way we see things, every patient deserves access to high-quality healthcare, which means every provider needs access
+              <h4 class="text-center text-default" data-aos="fade-left" data-aos-delay="500">The way we see things, every patient deserves access to high-quality healthcare, which means every provider needs access
               to high-quality
               medical technology and solutions.
-              </h3>
+              </h4>
               <h5 class="text-muted text-center mt-4 mb-4 animate" data-aos="fade-right" data-aos-offset="0"
                 data-aos-delay="1500">
                 Learn more about <span class="text-secondary">MedTelPlus</span>
@@ -46,7 +46,7 @@
     </div>
     <div class="row">
       <div class="downArrow bounce">
-        <i class="fa fa-chevron-down fa-2x"></i>
+        <i class="text-muted fa fa-chevron-down fa-2x"></i>
       </div>
     </div>
   </div>
@@ -75,7 +75,7 @@
     </div>
   </div>
 </section> -->
-<section class="section">
+<section class="section mt-3">
   <div class="container">
     <div class="row no-gutters">
       <div class="col-md-3 d-flex services align-self-stretch p-4 animated" data-aos="fade-up" data-aos-delay="50">
@@ -135,7 +135,7 @@
       </div>
       <div class="col-md-6 text-center my-auto pt-sm-5 animated" data-aos="fade-left">
         <h2>
-          Our Customers are the Best!
+          We Care About Healthcare Patients & Providers!
         </h2>
         <p class="lead text-muted mt-2">
           We genuinly care about helping people. That's why we got into this business.<br />
