--- a/src/app/shared/divider/divider.component.html
+++ b/src/app/shared/divider/divider.component.html
@@ -7,8 +7,8 @@
     </h2>
     <div class="row">
       <!-- <div class="col-lg-3"></div> -->
-      <div class="container mx-auto">
-        <p class="lead mt-2 mb-4 mx-auto px-2" [ngClass]="dividerColors?.text" [innerHTML]="dividerContent?.text | safeHtml" data-aos="fade-left" data-aos-delay="250"></p>
+      <div class="container m-auto">
+        <p class="lead m-auto px-2" [ngClass]="dividerColors?.text" [innerHTML]="dividerContent?.text | safeHtml" data-aos="fade-left" data-aos-delay="250"></p>
         <button class="mt-4" [ngClass]="dividerColors?.cta"
           (click)="navigateTo(dividerContent?.ctaLink)" data-aos="fade-up" data-aos-delay="350">
           Learn More
@@ -17,5 +17,5 @@
     </div>
   </div>
   <div *ngIf="dividerContent.imageURL" [style.height]="'650px'"
-    [style.background-image]="'url(' + dividerContent.imageURL + ')'" class="divider-background-image img-fluid"></div>
+    [style.background-image]="'url('+dividerContent.imageURL+')'" class="divider-background-image img-fluid" parallax [config]="{initialValue: -250, ratio: .25}"></div>
 </section>
