--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -18,38 +18,31 @@
 /*[ BACK TO TOP ]
 ///////////////////////////////////////////////////////////
 */
-.btn-back-to-top {
+.back-to-top-wrapper {
+    height: 50px;
     position: fixed;
-    bottom: 50px;
-    right: 15px;
-    background-color: $secondary;
-    opacity: 0.5;
-    justify-content: center;
-    align-items: center;
+    bottom: 0;
     z-index: 11000;
-    border-radius: 4px;
-    transition: all 0.4s;
-    -webkit-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    -moz-transition: all 0.4s;
-
-    .fa {
-        font-size: 22px;
-        color: white;
-        line-height: 1em;
-    }
-}
-
-
-.btn-back-to-top:hover {
-    opacity: 1;
-    cursor: pointer;
-}
-
-@media (max-width: 576px) {
-    .btn-back-to-top {
+    .btn {
+        position: absolute;
         bottom: 0;
-        
+        right: 6px;
+        transition: all 0.4s;
+        -webkit-transition: all 0.4s;
+        -o-transition: all 0.4s;
+        -moz-transition: all 0.4s;
+    
+        .fa {
+            font-size: 22px;
+            color: white;
+            line-height: 1em;
+        }
+    }
+    @media (max-width: 760px) {
+        bottom: 0;
+        .btn {
+            margin-bottom: 0;
+        }
     }
 }
 
@@ -72,8 +65,8 @@ section {
 
         &:not(.nav-item).active2,
         &:not(.nav-item):hover {
-            border-left: .25rem solid $primary !important;
-            color: $secondary;
+            border-left: .25rem solid $secondary !important;
+            color: $secondary !important;
         }
     }
 }
@@ -127,7 +120,7 @@ button {
 
 .bg-gray,
 .sidebar-widget {
-    background: #f5f5f5 !important;
+    background: $gray-500 !important;
 }
 
 .breadcrumb {
@@ -221,10 +214,13 @@ button {
     .list-group {
         width: auto;
         cursor: pointer;
-
-        .nav-item .btn {
-            color: #FFFFFF !important;
+        &:hover,
+        &:active {
+            >.nav-link {
+                color: $secondary !important;
+            }
         }
+        
     }
 }
 
@@ -242,7 +238,7 @@ button {
     }
 
     #wrapper.toggled #sidebar-wrapper {
-        width: 100vw;
+        width: 100%;
         margin-right: 0;
 
         #sidebar-wrapper .list-group {
@@ -253,8 +249,8 @@ button {
 
 @media (min-width: 991px) {
     #sidebar-wrapper {
-        width: 23.5rem;
-        margin-right: -23.5rem;
+        width: 30rem;
+        margin-right: -30rem;
     }
 
     #wrapper.toggled #sidebar-wrapper {
@@ -308,8 +304,6 @@ button {
 
 }
 
-
-
 /* =====================================================
 *     HERO SECTION
 * =====================================================
@@ -321,10 +315,10 @@ button {
     background-size: cover;
     width: 100%;
     height: 80vh;
+    opacity: .9;
+    background-attachment: fixed;
 
     &:not(.home-page) {
-        opacity: .8;
-        background-attachment: fixed;
     }
 
     transition: all ease-in-out;
@@ -339,18 +333,17 @@ button {
 }
 
 @media all and (max-width: 760px) {
-
     .hero,
     .background {
-        height: calc(90vh - 5rem);
+        height: calc(90vh - 2rem);
     }
 }
 
 .background {
     position: absolute;
     top: 5rem;
-    opacity: .45;
-    background-repeat: repeat;
+    // opacity: .9;
+    background-repeat: no-repeat;
     width: 100%;
     overflow: hidden;
     height: calc(80vh - 5rem);
@@ -2371,7 +2364,7 @@ code {
 .nav-link:hover,
 .nav-link:focus,
 .nav-link.active {
-    color: $primary;
+    color: $secondary;
     text-decoration: none;
 }
 
