added feature: covid-updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,12 @@
           <i class="fa fa-info-circle fa-2x"></i> Faq
         </button>
       </li>
+      <!-- Link-->
+      <li class="list-group-item" (click)="navbar.navigateTo('covid-updates')">
+        <button class="btn btn-link nav-link">
+          <i class="fa fa-medkit fa-2x"></i> COVID-19 Updates
+        </button>
+      </li>
       <!-- <a href="https://blog.medtelplus.com" target="_blank" rel="noopener noreferrer">
         <li class="list-group-item hvr hvr-sweep-to-right">
           <button class="btn btn-link nav-link">
