--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -6,7 +6,7 @@
         <!-- breadcrumb-->
         <nav aria-label="breadcrumb" class="d-flex justify-content-center">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item text-primary" (click)="navigateTo('/')" >Home </li>
+            <li class="breadcrumb-item text-primary" (click)="navigateTo('/')">Home </li>
             <li aria-current="page" class="breadcrumb-item active">Faq </li>
           </ol>
         </nav>
@@ -28,7 +28,7 @@
         </div>
         <div class="row">
       <div class="downArrow bounce">
-        <i class="fa fa-chevron-down fa-2x"></i>
+        <i class="text-dark fa fa-chevron-down fa-2x"></i>
       </div>
     </div>
       </div>
